# hibate-library

./: .gitignore  README.md  charsets.gradle  constants.gradle  environment.gradle  extensions.android.gradle  extensions.gradle  gradle.properties  repositories.gradle  settings.gradle
hibate/annotation/: build.android.gradle  build.gradle
hibate/annotation/src/main/: AndroidManifest.xml
hibate/annotation/src/main/android/androidx/annotation/: AnyThread.java  CallSuper.java  CheckResult.java  ColorInt.java  ColorLong.java  Discouraged.java  EmptySuper.java  FloatRange.java  GuardedBy.java  IntDef.java  IntRange.java  LongDef.java  MainThread.java  NonNull.java  Nullable.java  OpenForTesting.java  ProductionVisibility.java  RequiresExtension.java  RequiresFeature.java  RestrictTo.java  ReturnThis.java  Size.java  StringDef.java  UiThread.java  VisibleForTesting.java
hibate/annotation/src/main/java/org/hibate/annotation/: RequiresApi.java  TargetApi.java
hibate/logger/logback/: build.android.gradle
hibate/logger/logback/docs/: README.md
hibate/logger/logback/src/main/: AndroidManifest.xml
hibate/logger/natives/: build.android.gradle  build.gradle
hibate/logger/natives/docs/: README.md
hibate/logger/natives/src/main/: AndroidManifest.xml  build.sh
hibate/logger/natives/src/main/auto/: makefile  objects.mk  options.mk  sources.mk
hibate/logger/natives/src/main/auto/jni/: subdir.mk
hibate/logger/natives/src/main/auto/jni/libjni/: subdir.mk
hibate/logger/natives/src/main/auto/jni/logger/: subdir.mk
hibate/logger/natives/src/main/jni/: Application.mk  CMakeLists.cmake  CMakeLists.txt
hibate/logger/natives/src/main/jni/libjni/: Android.mk  CMakeLists.txt  jni_logger_context.cpp  jni_logger_handler.cpp  jni_logger_handler.h  onLoad.cpp
hibate/logger/natives/src/main/jni/logger/: Android.mk  CMakeLists.txt  api.h  lock.cpp  lock.h  logger.c  logger.h  logger_adapter.cpp  logger_adapter.h  logger_context.cpp  logger_context.h  logger_core.cpp  logger_core.h  logger_layout.cpp  logger_layout.h
hibate/logger/natives/src/main/jni/utils/: Android.mk  CMakeLists.txt  errcode.h  exceptions.h  jni_util.cpp  jni_util.h
media/graphics/: build.android.gradle
media/graphics/docs/: README.md
media/graphics/src/main/: AndroidManifest.xml
media/graphics/src/main/java/org/hibate/graphics/: PixelFormat.java  Rotation.java
media/graphics/src/main/java/org/hibate/graphics/buffer/: ByteBufferFactory.java  ByteBufferFactoryImpl.java  Cleaner.java
media/graphics/src/main/java/org/hibate/graphics/codec/: CodecCapabilities.java  CodecCapabilitiesFactory.java  CodecCapabilitiesImpl.java
media/graphics/src/main/jni/libjni/: Android.mk  onLoad.cpp
media/graphics/src/main/jni/libjni/codec/: jni_codec_capabilities.cpp
media/graphics/src/main/jni/prebuilt/: .gitignore  Android.mk  README.md
media/graphics/src/main/jni/utils/: errcode.h  exceptions.h  onload.h
media/media/: build.android.gradle  build.gradle
media/media/docs/: README.md
media/media/src/main/: build.bat  build.sh  clean.bat
media/media/src/main/auto/: makefile  objects.mk  options.mk  sources.mk
media/media/src/main/auto/jni/: subdir.mk
media/media/src/main/auto/jni/lang/: subdir.mk
media/media/src/main/auto/jni/lang/text/: subdir.mk
media/media/src/main/auto/jni/libjni/: subdir.mk
media/media/src/main/auto/jni/libjni/codec/: subdir.mk
media/media/src/main/auto/jni/libjni/filter/: subdir.mk
media/media/src/main/auto/jni/libjni/format/: subdir.mk
media/media/src/main/auto/jni/libjni/util/: subdir.mk
media/media/src/main/auto/jni/utils/: subdir.mk
media/media/src/main/java/org/hibate/media/codec/: AVCodec.java  AVCodecContext.java  AVCodecFactory.java  AVCodecID.java  AVCodecParameters.java  AVCodecType.java  AVCoder.java  AVDecoder.java  AVEncoder.java  AVMediaType.java  AVPacket.java
media/media/src/main/java/org/hibate/media/filter/: AVFilter.java  AVFilterContext.java  AVFilterFactory.java  AVFilterGraph.java  AVFilterInOut.java
media/media/src/main/java/org/hibate/media/format/: AVFormat.java  AVFormatContext.java  AVInputFormat.java  AVInputStream.java  AVOutputFormat.java  AVOutputStream.java  (+1 more)
media/media/src/main/jni/: Application.cmake  Application.mk  CMakeLists.txt
media/media/src/main/jni/lang/: Android.mk  CMakeLists.txt
media/media/src/main/jni/lang/text/: text_utils.cpp  text_utils.h
media/media/src/main/jni/libjni/: Android.mk  CMakeLists.txt  onLoad.cpp
media/media/src/main/jni/libjni/codec/: jni_av_codec.cpp  jni_av_codec.h  jni_av_codec_context.cpp  jni_av_codec_context.h  jni_av_codec_factory.cpp  jni_av_codec_id.cpp  jni_av_codec_id.h  jni_av_codec_parameters.cpp  jni_av_codec_parameters.h  jni_av_decoder.cpp  jni_av_decoder.h  jni_av_encoder.cpp  jni_av_encoder.h  jni_av_packet.cpp  jni_av_packet.h
media/media/src/main/jni/libjni/filter/: jni_av_filter.cpp  jni_av_filter.h  jni_av_filter_context.cpp  jni_av_filter_context.h  jni_av_filter_factory.cpp  jni_av_filter_graph.cpp  jni_av_filter_graph.h  jni_av_filter_in_out.cpp  jni_av_filter_in_out.h
media/media/src/main/jni/libjni/format/: jni_av_format.cpp  jni_av_format_context.cpp  jni_av_format_context.h  jni_av_input_format.cpp  jni_av_input_format.h  jni_av_input_stream.cpp  jni_av_input_stream.h  jni_av_output_format.cpp  jni_av_output_format.h  jni_av_output_stream.cpp  jni_av_output_stream.h  jni_av_stream.cpp  jni_av_stream.h
media/media/src/main/jni/libjni/util/: jni_av_channel_layout.cpp  jni_av_channel_layout.h  jni_av_config.h  jni_av_dictionary.cpp  jni_av_dictionary.h  jni_av_frame.cpp  jni_av_frame.h  jni_av_log.cpp  jni_av_math.cpp  jni_av_options.cpp  jni_av_options.h  jni_av_rational.cpp  jni_av_rational.h  jni_av_util.cpp  jni_av_util.h
media/media/src/main/jni/prebuilt/: Android.mk  CMakeLists.txt  README.md
media/media/src/main/jni/utils/: errcode.h  exceptions.h
media/media/src/main/sbin/: build.sh  options.sh
media/media/src/test/java/org/hibate/media/: ReMuxTest.java  ThumbnailTest.java  TranscodeTest.java
media/media/src/test/resources/: logback.xml
(+58 files in other folders)
